2000-11-16  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* regcache.c (read_register_bytes): Failing to set register_valid
	is not necessarily an error, if the register is a pseudo-register.
	Some pseudo-registers are never marked as valid, so that they will
	be read anew every time.  Determining if a pseudo-register is valid
	(or should be marked invalid) may be difficult, whereas just 
	recomputing it may be cheap.

Thu Nov 16 09:47:57 2000  David Taylor  <taylor@redhat.com>

	* tracepoint.c (trace_find_tracepoint_command): Replace call to
	parse_and_eval_address with a call to parse_and_eval_long as
	we are evaluating an integer, not an address.
	* top.c (show_commands): Ditto.

2000-11-15  Kevin Buettner  <kevinb@redhat.com>

	* xcoffread.c (arrange_linetable, xcoff_initial_scan): Protoize.

Wed Nov 15 09:31:39 2000  David Taylor  <taylor@redhat.com>

	* utils.c (strlen_paddr, paddr, paddr_nz): Use TARGET_ADDR_BIT,
	not TARGET_PTR_BIT, since we are dealing with addresses, not
	pointers.
	
2000-11-14  Daniel Berlin  <dberlin@redhat.com>

	From Kenneth Block <kenneth.block@compaq.com>

        * demangle.c : Use libibery list of demanglers instead of out of
        date local copy.

Wed Nov 15 00:29:46 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	From Klaus Espenlaub <espenlaub@informatik.uni-ulm.de>
	* remote.c (_initialize_remote): Call
 	show_memory_write_packet_size when ``show remotewritesize''
 	command.

2000-11-13  Eli Zaretskii <eliz@is.elta.co.il>

	* config/djgpp/config.sed: Fix tweaking "VPATH=.:foo", and handle
        the gettext's posrcprefix correctly with drive letters.

2000-11-10  Jim Blandy  <jimb@redhat.com>

	* stabsread.c (read_range_type): Properly construct complex
	type nodes.

2000-11-10  Fernando Nasser  <fnasser@totem.toronto.redhat.com>

	* symtab.c (decode_line_1, total_number_of_methods, find_methods,
	build_command_line_spec, find_toplevel_char, decode_line_2):
	Move to linespec.c.